--- a/InvestmentTracker/docker-compose.yml
+++ b/InvestmentTracker/docker-compose.yml
@@ -13,7 +13,9 @@ services:
       - mysql
 
   mysql:
-    image: mysql:8.0
+    build:
+      context: .
+      dockerfile: Dockerfile.mysql
     container_name: mysql_container
     ports:
       - "3306:3306"
