--- a/InvestmentTracker/docker-compose.yml
+++ b/InvestmentTracker/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       ConnectionStrings__DefaultConnection: Server=mysql;Database=InvestmentDB;User=myuser;Password=myuserPassword;
     depends_on:
       - mysql
+    command: sh -c "sleep 60 && dotnet InvestmentTracker.dll" 
 
   mysql:
     build:
